# src/main/resources/public/openapi.json
@@ -26,8 +26,8 @@
                 "$ref": "#/components/schemas/TrustQuery"
               },
               "examples": {
-                "TrustQueryEuPid": {
-                  "$ref": "#/components/examples/TrustQueryEuPid"
+                "TrustQueryPid": {
+                  "$ref": "#/components/examples/TrustQueryPid"
                 }
               }
             }
@@ -60,8 +60,8 @@
                   "$ref": "#/components/schemas/ErrorResponse"
                 },
                 "examples": {
-                  "ErrorResponseUnparsableRequestBody": {
-                    "$ref": "#/components/examples/ErrorResponseUnparsableRequestBody"
+                  "ErrorResponseMissingUseCase": {
+                    "$ref": "#/components/examples/ErrorResponseMissingUseCase"
                   }
                 }
               }
@@ -81,25 +81,24 @@
         "nullable": false,
         "format": "base64"
       },
-      "VerificationCase": {
+      "VerificationContext" : {
         "type": "string",
         "nullable": false,
         "enum": [
-          "EU_WIA",
-          "EU_WUA",
-          "EU_WUA_STATUS",
-          "EU_PID",
-          "EU_PID_STATUS",
-          "EU_QEAA",
-          "EU_QEAA_STATUS",
-          "EU_PUB_EAA",
-          "EU_PUB_EAA_STATUS",
-          "EU_EAA",
-          "EU_EAA_STATUS",
-          "EU_WRPRC",
-          "EU_WRPRC_STATUS",
-          "EU_WRPAC",
-          "EU_WRPAC_STATUS"
+          "WalletInstanceAttestation",
+          "WalletUnitAttestation",
+          "WalletUnitAttestationStatus",
+          "PID",
+          "PIDStatus",
+          "PubEAA",
+          "PubEAAStatus",
+          "QEAA",
+          "QEAAStatus",
+          "EAA",
+          "EAAStatus",
+          "WalletRelyingPartyRegistrationCertificate",
+          "WalletRelyingPartyAccessCertificate",
+          "Custom"
         ]
       },
       "TrustQuery": {
@@ -115,20 +114,25 @@
             },
             "minItems": 1
           },
-          "case": {
+          "verificationContext": {
             "allOf": [
               {
                 "description": "How the X509 certificate chain trust must be checked as"
               },
               {
-                "$ref": "#/components/schemas/VerificationCase"
+                "$ref": "#/components/schemas/VerificationContext"
               }
             ]
+          },
+          "useCase": {
+            "description": "Verification use-case applicable to the selected verification context",
+            "type": "string",
+            "nullable": true
           }
         },
         "required": [
           "chain",
-          "case"
+          "verificationContext"
         ]
       },
       "TrustResponse": {
@@ -158,13 +162,13 @@
       }
     },
     "examples": {
-      "TrustQueryEuPid": {
+      "TrustQueryPid": {
         "description": "Check if the X509 certificate chain belongs to a trusted PID Provider",
         "value": {
           "chain": [
             "MIIC6zCCApGgAwIBAgIUbX8nbYSLRvy10mKN+hfCVr/8cBcwCgYIKoZIzj0EAwIwXDEeMBwGA1UEAwwVUElEIElzc3VlciBDQSAtIFVUIDAyMS0wKwYDVQQKDCRFVURJIFdhbGxldCBSZWZlcmVuY2UgSW1wbGVtZW50YXRpb24xCzAJBgNVBAYTAlVUMB4XDTI1MDQxMDE0MjU0MFoXDTI2MDcwNDE0MjUzOVowUjEUMBIGA1UEAwwLUElEIERTIC0gMDMxLTArBgNVBAoMJEVVREkgV2FsbGV0IFJlZmVyZW5jZSBJbXBsZW1lbnRhdGlvbjELMAkGA1UEBhMCVVQwWTATBgcqhkjOPQIBBggqhkjOPQMBBwNCAASrxZ13wLj/nUuGebYRmPO0q7pRk1x1SjrqLTvtQFpQcy9TwFCcgie/BBC2j/KpLcCr+oj4tyZAofmvHdaTExbBo4IBOTCCATUwHwYDVR0jBBgwFoAUYseURyi9D6IWIKeawkmURPEB08cwJwYDVR0RBCAwHoIcZGV2Lmlzc3Vlci1iYWNrZW5kLmV1ZGl3LmRldjAWBgNVHSUBAf8EDDAKBggrgQICAAABAjBDBgNVHR8EPDA6MDigNqA0hjJodHRwczovL3ByZXByb2QucGtpLmV1ZGl3LmRldi9jcmwvcGlkX0NBX1VUXzAyLmNybDAdBgNVHQ4EFgQUcs3KyqizHgtXRe32n6JBJHAfaLYwDgYDVR0PAQH/BAQDAgeAMF0GA1UdEgRWMFSGUmh0dHBzOi8vZ2l0aHViLmNvbS9ldS1kaWdpdGFsLWlkZW50aXR5LXdhbGxldC9hcmNoaXRlY3R1cmUtYW5kLXJlZmVyZW5jZS1mcmFtZXdvcmswCgYIKoZIzj0EAwIDSAAwRQIgTVZnchD+Qjq53Xs0oc07y3zG6kAXFkJ+ZKzlVG22sC8CIQDtDMQq0Qm/fQ5orrjRT4XB+0Jb6xFPxX9QkVRaMy/IiA=="
           ],
-          "case": "EU_PID"
+          "verificationContext": "PID"
         }
       },
       "TrustResponseTrusted": {
@@ -179,10 +183,10 @@
           "trusted": false
         }
       },
-      "ErrorResponseUnparsableRequestBody": {
-        "description": "Request body cannot be parsed",
+      "ErrorResponseMissingUseCase": {
+        "description": "Missing useCase",
         "value": {
-          "description": "Unparsable request body"
+          "description": "Missing useCase"
         }
       }
     }
